# advent

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
advent/year_2022/: day_1.py  day_2.py  day_3.py  day_4.py  day_6.py  day_7.py  day_8.py
