[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Alec Buckenheimer <abuckenheimer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
advent-of-code-data = "^1.2.3"
pytest = "^7.2.0"
pudb = "^2022.1.3"
pytest-pudb = "^0.7.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.10.0"
ipython = "^8.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
